--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,7 +1,34 @@
 stages:
-  data_collection:
+  data_collections:
     cmd: python3 src/data/data_collection.py
     deps:
-    - /src/data/data_collection
+    - src/data/data_collection.py
+    params:
+    - data_collection.test_size
     outs:
     - data/raw
+  data_processing:
+    cmd: python3 src/data/data_prep.py
+    deps:
+    - data/raw
+    - src/data/data_prep.py
+    outs:
+    - data/processed
+
+  model_building:
+    cmd: python3 src/model/model_building.py
+    deps:
+    - data/processed
+    - src/model/model_building.py
+    params:
+    - model_building.n_estimators
+    outs:
+    - models/model.pkl
+
+  model_evaluation:
+    cmd: python3 src/model/model_eval.py
+    deps:
+    - models/model.pkl
+    - src/model/model_eval.py
+    metrics:
+    - reports/metrics.json
